syntax = 'proto3';
option go_package = "github.com/vedantkulkarni/mqchat/proto";



message Room {
   int64  id = 1;
   int64 user_id_1 = 2;
   int64 user_id_2 = 3;
}

message GetRoomsRequest {
  int64 user_id = 1;
}

message GetRoomsResponse {
  int64  user_id = 1;
  repeated Room rooms = 2;
}

message CreateRoomRequest {
  int64 user_id_1 = 1;
  int64 user_id_2 = 2;

}
message CreateRoomResponse {
  int64 conn_id = 1;
}


service RoomGRPCService{
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomRequest) {}
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse) {}
}

